updated buildSchedule service to return result